Unmark untranslatable strings in glade files.

--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -6,7 +6,7 @@
 <widget class="GtkAboutDialog" id="vmm-about">
   <property name="visible">True</property>
   <property name="destroy_with_parent">True</property>
-  <property name="name" translatable="yes">Virtual Machine Manager</property>
+  <property name="name">Virtual Machine Manager</property>
   <property name="copyright" translatable="yes">Copyright (C) 2006 Red Hat Inc.</property>
   <property name="comments" translatable="yes">Powered by libvirt</property>
   <property name="license">    This program is free software; you can redistribute it and/or modify
@@ -25,7 +25,7 @@
 </property>
   <property name="wrap_license">False</property>
   <property name="website">http://virt-manager.et.redhat.com/</property>
-  <property name="website_label" translatable="yes">http://virt-manager.et.redhat.com/</property>
+  <property name="website_label">http://virt-manager.et.redhat.com/</property>
   <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
 Hugh O. Brock &lt;hbrock@redhat.com&gt;
 Máirín Duffy &lt;duffy@redhat.com&gt;
