--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -490,7 +490,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label282">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes"></property>
+				      <property name="label"></property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -603,7 +603,7 @@
 					  <property name="editable">True</property>
 					  <property name="visibility">True</property>
 					  <property name="max_length">0</property>
-					  <property name="text" translatable="yes"></property>
+					  <property name="text"></property>
 					  <property name="has_frame">True</property>
 					  <property name="invisible_char">•</property>
 					  <property name="activates_default">False</property>
@@ -1558,7 +1558,7 @@
 			      <property name="editable">True</property>
 			      <property name="visibility">True</property>
 			      <property name="max_length">17</property>
-			      <property name="text" translatable="yes"></property>
+			      <property name="text"></property>
 			      <property name="has_frame">True</property>
 			      <property name="invisible_char">•</property>
 			      <property name="activates_default">False</property>
@@ -2570,7 +2570,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="summary-disk-size">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">5 GB</property>
+			      <property name="label">5 GB</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2597,7 +2597,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="summary-disk-image">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">/xen/demo.img</property>
+			      <property name="label">/xen/demo.img</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2782,7 +2782,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="summary-net-target">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">eth0</property>
+			      <property name="label">eth0</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2894,7 +2894,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="summary-mac-address">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">-</property>
+			      <property name="label">-</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -3152,7 +3152,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="summary-graphics-address">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">127.0.0.1</property>
+			      <property name="label">127.0.0.1</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
