--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -1084,7 +1084,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="net-info-size">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">256</property>
+				      <property name="label">256</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1112,7 +1112,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="net-info-gateway">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">192.168.1.1</property>
+				      <property name="label">192.168.1.1</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1140,7 +1140,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="net-info-broadcast">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">192.168.1.255</property>
+				      <property name="label">192.168.1.255</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1168,7 +1168,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="net-info-netmask">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">255.255.255.0</property>
+				      <property name="label">255.255.255.0</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1938,7 +1938,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-name">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">demo</property>
+			  <property name="label">demo</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1965,7 +1965,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-ip4-network">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">192.168.10.0/24</property>
+			  <property name="label">192.168.10.0/24</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1992,7 +1992,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-dhcp-end">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">5 GB</property>
+			  <property name="label">5 GB</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2019,7 +2019,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-ip4-gateway">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">192.168.10.254</property>
+			  <property name="label">192.168.10.254</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2047,7 +2047,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-ip4-netmask">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">255.255.255.0</property>
+			  <property name="label">255.255.255.0</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2075,7 +2075,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-dhcp-start">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">/xen/demo.img</property>
+			  <property name="label">/xen/demo.img</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2355,7 +2355,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label379">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">	</property>
+			  <property name="label">	</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
