--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1627,7 +1627,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="label353">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes"> </property>
+			      <property name="label"> </property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2556,7 +2556,7 @@
 			      <property name="invisible_char">•</property>
 			      <property name="activates_default">False</property>
 			      <accessibility>
-				<atkproperty name="AtkObject::accessible_name" translatable="yes">kernel-params</atkproperty>
+				<atkproperty name="AtkObject::accessible_name">kernel-params</atkproperty>
 			      </accessibility>
 			    </widget>
 			    <packing>
@@ -4198,7 +4198,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="create-cpus-physical">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">256	</property>
+		      <property name="label">256	</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4428,7 +4428,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label340">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes"> </property>
+		      <property name="label"> </property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4456,7 +4456,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="create-host-memory">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">2 GB</property>
+		      <property name="label">2 GB</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4741,7 +4741,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-name">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">demo</property>
+			  <property name="label">demo</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4768,7 +4768,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-method">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">para</property>
+			  <property name="label">para</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4822,7 +4822,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-disk-size">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">5 GB</property>
+			  <property name="label">5 GB</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4849,7 +4849,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-install-source">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">http://</property>
+			  <property name="label">http://</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4877,7 +4877,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-kickstart-source">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">http://</property>
+			  <property name="label">http://</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4905,7 +4905,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-disk-image">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">/xen/demo.img</property>
+			  <property name="label">/xen/demo.img</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5213,7 +5213,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label379">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">	</property>
+			  <property name="label">	</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5269,7 +5269,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-virtual-cpus">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">5	</property>
+			  <property name="label">5	</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5381,7 +5381,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-net-target">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">eth0</property>
+			  <property name="label">eth0</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5409,7 +5409,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-max-memory">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">512 MB</property>
+			  <property name="label">512 MB</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5437,7 +5437,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-initial-memory">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">400 MB</property>
+			  <property name="label">400 MB</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5549,7 +5549,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-mac-address">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">-</property>
+			  <property name="label">-</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5605,7 +5605,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-kernel-args">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">ip=192.168.1.1</property>
+			  <property name="label">ip=192.168.1.1</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
