--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -443,7 +443,7 @@
                                       <widget class="GtkLabel" id="overview-network-traffic-text">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">80 MB of 1 GB</property>
+                                        <property name="label">80 MB of 1 GB</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">2</property>
@@ -473,7 +473,7 @@
                                       <widget class="GtkLabel" id="overview-memory-usage-text">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">30 MB of 128 MB</property>
+                                        <property name="label">30 MB of 128 MB</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">2</property>
@@ -488,7 +488,7 @@
                                       <widget class="GtkLabel" id="overview-cpu-usage-text">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">18%</property>
+                                        <property name="label">18%</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">2</property>
@@ -635,7 +635,7 @@
                                           <widget class="GtkLabel" id="state-vm-maxvcpus">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">8</property>
+                                            <property name="label">8</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -683,7 +683,7 @@
                                           <widget class="GtkLabel" id="state-vm-vcpus">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">2</property>
+                                            <property name="label">2</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -709,7 +709,7 @@
                                           <widget class="GtkLabel" id="state-host-cpus">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">8</property>
+                                            <property name="label">8</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -942,7 +942,7 @@
                                           <widget class="GtkLabel" id="state-vm-memory">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">200 MB</property>
+                                            <property name="label">200 MB</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -1020,7 +1020,7 @@
                                           <widget class="GtkLabel" id="state-host-memory">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">2 GB</property>
+                                            <property name="label">2 GB</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -1162,7 +1162,7 @@
                                       <widget class="GtkLabel" id="disk-permissions">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label423</property>
+                                        <property name="label">label423</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1190,7 +1190,7 @@
                                       <widget class="GtkLabel" id="disk-source-path">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label402</property>
+                                        <property name="label">label402</property>
                                         <property name="ellipsize">PANGO_ELLIPSIZE_START</property>
                                       </widget>
                                       <packing>
@@ -1224,7 +1224,7 @@
                                       <widget class="GtkLabel" id="disk-target-device">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label393</property>
+                                        <property name="label">label393</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1477,7 +1477,7 @@
                                       <widget class="GtkLabel" id="network-source-device">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label401</property>
+                                        <property name="label">label401</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1520,7 +1520,7 @@
                                       <widget class="GtkLabel" id="network-source-type">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label395</property>
+                                        <property name="label">label395</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1672,7 +1672,7 @@
                                       <widget class="GtkLabel" id="input-dev-mode">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label401</property>
+                                        <property name="label">label401</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1700,7 +1700,7 @@
                                       <widget class="GtkLabel" id="input-dev-type">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label403</property>
+                                        <property name="label">label403</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1878,7 +1878,7 @@
                                       <widget class="GtkLabel" id="graphics-password">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label401</property>
+                                        <property name="label">label401</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1893,7 +1893,7 @@
                                       <widget class="GtkLabel" id="graphics-port">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label401</property>
+                                        <property name="label">label401</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1908,7 +1908,7 @@
                                       <widget class="GtkLabel" id="graphics-address">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label401</property>
+                                        <property name="label">label401</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1936,7 +1936,7 @@
                                       <widget class="GtkLabel" id="graphics-type">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label403</property>
+                                        <property name="label">label403</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -2006,7 +2006,7 @@
                     <child>
                       <widget class="GtkLabel" id="config-graphics-remove">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">label409</property>
+                        <property name="label">label409</property>
                       </widget>
                       <packing>
                         <property name="type">tab</property>
