--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -276,7 +276,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="overview-hostname">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">example.com</property>
+			      <property name="label">example.com</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -330,7 +330,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="overview-memory">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">2000 MB</property>
+			      <property name="label">2000 MB</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -357,7 +357,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="overview-cpus">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">4</property>
+			      <property name="label">4</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -384,7 +384,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="overview-arch">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">x86_64</property>
+			      <property name="label">x86_64</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -439,7 +439,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="overview-uri">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">example.com</property>
+			      <property name="label">example.com</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -586,7 +586,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="performance-cpu">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">60%</property>
+			      <property name="label">60%</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -614,7 +614,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="performance-memory">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">1.59 GB of 2.2 GB</property>
+			      <property name="label">1.59 GB of 2.2 GB</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
